# faceauth

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  hardware_report.md
.github/workflows/: ci.yml
cli/: faceauth_cli.py
config/: faceauth.toml
faceauth/: __init__.py  __main__.py  antispoof.py  audit.py  camera.py  config.py  daemon.py  detector.py  hardware.py  pam_client.py  pipeline.py  protocol.py  providers.py  recognizer.py  storage.py
pam/: faceauth-pam-helper  faceauth_pam.py  pam-configs-faceauth
plans/adr/: ADR-001-camera-auto-detection.md  ADR-002-setup-wizard.md  ADR-003-audit-logging.md  ADR-004-pluggable-recognition.md
plans/prd/: PRD-001-setup-wizard.md  PRD-002-readme-rewrite.md  PRD-003-camera-auto-detection.md  PRD-004-audit-logging.md  PRD-005-community-infra.md
systemd/: faceauth-system.service  faceauth.service
tests/: conftest.py  test_antispoof.py  test_audit.py  test_camera.py  test_config.py  test_daemon.py  test_detector.py  test_hardware.py  test_pam_client.py  test_pipeline.py  test_protocol.py  test_recognizer.py  test_storage.py
